--- a/gstbillingapp/templates/gstbillingapp/customers.html
+++ b/gstbillingapp/templates/gstbillingapp/customers.html
@@ -1,6 +1,6 @@
 {% extends "gstbillingapp/base.html" %}
+{% load  static crispy_forms_tags %}
 
-{% load static %}
 
 
 
@@ -25,7 +25,7 @@
 			<th></th>
 		</tr>
 	</thead>
-	<tbody class="two-col-form">
+	<tbody class="container two-col-form">
 		{% for customer in customers %}
 		<tr>
 			<td>{{customer.customer_name}}</td>
