--- a/gstbillingapp/templates/gstbillingapp/invoice_printer.html
+++ b/gstbillingapp/templates/gstbillingapp/invoice_printer.html
@@ -1,175 +1,261 @@
 {% extends "gstbillingapp/print_base.html" %}
 
-
+{% load static %}
 {% block content %}
+<!-- <div class="col-sm-6 col-md-6 col-lg-6 col-6">
+	<div>
+		<strong>{{user_profile.business_title}}</strong>
+	</div>
+	<div id="invoice_profile_data">{{user_profile.business_address}}</div>
+	{% if user_profile.business_email %}
+	<div>EMAIL: {{user_profile.business_email}}</div>
+	{% endif %}
+	{% if user_profile.business_phone %}
+	<div>Phone: {{user_profile.business_phone}}</div>
+	{% endif %}
+	{% if user_profile.business_gst %}
+	<div>GST No: {{user_profile.business_gst}}</div>
+	{% endif %}
+</div> -->
 
-	<div class="card">
-		<div class="card-header">
-			<div class="row">
-			<div class="col-sm-6 col-6"><strong>Invoice Date: {{invoice.invoice_date}}</strong></div> 
-			<div class="col-sm-6 text-right col-6"><strong>Invoice No:{{invoice.invoice_number}}</strong></div>
+<div class="card container p-md-4 my-5">
+	<div class="header">
+
+		<div class="row">
+
+			<div class="col-sm-6 col-lg-6 col-md-6">
+				<strong>Invoice No:{{invoice.invoice_number}}</strong>
 			</div>
-		</div>
 
-		<div class="card-body">
-			<div class="row">
+			<div class=" text-right col-sm-6 col-lg-6 col-md-6">
 
+				<strong>Invoice Date: {{invoice.invoice_date}}</strong>
+			</div>
+			<!-- <div class="col-7">
+				<div>
+					<h2 class="text-center" ><strong>{{user_profile.business_title}}</strong></h2>
+				</div>
+				<hr>
+				<div class="text-center" id="invoice_profile_data">{{user_profile.business_address}}</div>
+				{% if user_profile.business_email %}
+				<div class="text-"  >EMAIL: {{user_profile.business_email}}</div>
+				{% endif %}
+				{% if user_profile.business_phone %}
+				<div class="text-center"> Phone: {{user_profile.business_phone}}</div>
+				{% endif %}
+				{% if user_profile.business_gst %}
+				<div class="text">GST No: {{user_profile.business_gst}}</div>
+				{% endif %}
+			</div> -->
 
-				<div class="col-sm-6 col-md-6 col-lg-6 col-6">
-					<div>
-						<strong>{{user_profile.business_title}}</strong>
+			<div class="col-12" style="max-width:auto;">
+				<div class="row g-0">
+					<div class="col-3">
+
+						<img src="{% static 'gstbillingapp/images/icon.jpg' %}" class="img-thumbnail" alt=""
+							height="100px" width="150px">
 					</div>
-						<div id="invoice_profile_data">{{user_profile.business_address}}</div>
-					{% if user_profile.business_email %}
-						<div>EMAIL: {{user_profile.business_email}}</div>
-					{% endif %}
-					{% if user_profile.business_phone %}
-						<div>Phone: {{user_profile.business_phone}}</div>
-					{% endif %}
-					{% if user_profile.business_gst %}
-						<div>GST No: {{user_profile.business_gst}}</div>
-					{% endif %}
-				</div>
-
-
-
-				<div class="col-sm-6 col-md-6 col-lg-6 col-6">
-					<h6 class="mb-3">Billed To:</h6>
-					<div>
-						<strong>{{ invoice_data.customer_name }}</strong>
+					<div class="col-7">
+						<div class="card-body">
+							<h2 class="card-title"><strong>{{user_profile.business_title}}</strong></h2>
+							<hr>
+							{% if user_profile.business_email %}
+							<div class="card-text-">EMAIL: {{user_profile.business_email}}</div>
+							{% endif %}
+							{% if user_profile.business_phone %}
+							<div class=" card-text"> Phone: {{user_profile.business_phone}}</div>
+							{% endif %}
+							{% if user_profile.business_gst %}
+							<div class="card-text">GST No: {{user_profile.business_gst}}</div>
+							{% endif %}
+						</div>
 					</div>
-					<div>{{ invoice_data.customer_address }}</div>
-					<div>Phone: {{ invoice_data.customer_phone }}</div>
-					<div>GST No: {{ invoice_data.customer_gst }}</div>
-					{% if invoice_data.vehicle_number %}
-					<div><strong>Vehicle No:</strong> {{ invoice_data.vehicle_number }}</div>
-					{% endif %}
-				</div>
-
-
-
-			</div>
-
-			<div class="table-responsive-sm">
-				<table class="table table-striped table-invoice">
-					<thead>
-						<tr>
-							<th class="text-center">#</th>
-							<th class="text-left">Item</th>
-							<th class="text-center">HSN / SAC</th>
-							<th class="text-center">Unit</th>
-							<th class="text-right">Qty</th>
-							<th class="text-right">Rate ({{ currency }})</th>
-							<th class="text-right">Taxable Amount ({{ currency }})</th>
-							<th class="text-right">GST (%)</th>
-							{% if invoice_data.igstcheck %}
-								<th class="text-right">IGST ({{ currency }})</th>
-							{% else %}
-								<th class="text-right">CGST ({{ currency }})</th>
-								<th class="text-right">SGST ({{ currency }})</th>
-							{% endif %}
-							<th class="text-right">Total Amount ({{ currency }})</th>
-
-						</tr>
-					</thead>
-					<tbody>
-						{% for item in invoice_data.items %}
-						<tr>
-							<td class="text-center">{{ forloop.counter }}</td>
-							<td class="text-left strong">{{ item.invoice_product }}</td>
-							<td class="text-center">{{ item.invoice_hsn }}</td>
-							<td class="text-center">{{ item.invoice_unit }}</td>
-							<td class="text-right">{{ item.invoice_qty }}</td>
-							<td class="text-right">{{ item.invoice_rate_without_gst|floatformat:2 }}</td>
-							<td class="text-right">{{ item.invoice_amt_without_gst|floatformat:2 }}</td>
-							<td class="text-right">{{ item.invoice_gst_percentage }}</td>
-							{% if invoice_data.igstcheck %}
-								<td class="text-right">{{ item.invoice_amt_igst|floatformat:2 }}</td>
-							{% else %}
-								<td class="text-right">{{ item.invoice_amt_cgst|floatformat:2 }}</td>
-								<td class="text-right">{{ item.invoice_amt_sgst|floatformat:2 }}</td>
-							{% endif %}
-							<td class="text-right">{{ item.invoice_amt_with_gst|floatformat:2 }}</td>
-						</tr>
-						{% endfor %}
-
-						<tr id="table-invoice-total-row">
-							{% if invoice_data.igstcheck %}
-								<td class="text-right" colspan="6">Total: </td>
-								<td class="text-right">{{ currency }} {{ invoice_data.invoice_total_amt_without_gst|floatformat:2 }}</td>
-								<td class="text-right"></td>
-								<td class="text-right">{{ currency }} {{invoice_data.invoice_total_amt_igst|floatformat:2 }}</td>
-							{% else %}
-								<td class="text-right" colspan="6">Total: </td>
-								<td class="text-right">{{ currency }} {{ invoice_data.invoice_total_amt_without_gst|floatformat:2 }}</td>
-								<td class="text-right"></td>
-								<td class="text-right">{{ currency }} {{invoice_data.invoice_total_amt_cgst|floatformat:2 }}</td>
-								<td class="text-right">{{ currency }} {{invoice_data.invoice_total_amt_sgst|floatformat:2 }}</td>
-							{% endif %}
-							<td class="text-right"><strong>{{ currency }} {{ invoice_data.invoice_total_amt_with_gst|floatformat:2 }}</strong></td>
-						</tr>
-
-					</tbody>
-				</table>
-			</div>
-
-			<div class="row">
-
-
-				<div class="col-sm-6 col-lg-6 col-md-6">
-					
-				</div>
-
-				<div class="col-sm-6 col-lg-6 col-md-6">
-					<table class="table text-right" id="invoice-grand-total-table">
-						<tr>
-							<td>Total Taxable Amount: </td>
-							<td>{{ currency }} {{ invoice_data.invoice_total_amt_without_gst|floatformat:2 }}</td>
-						</tr>
-						{% if invoice_data.igstcheck %}
-							<tr>
-								<td>IGST: </td>
-								<td>{{ currency }} {{ invoice_data.invoice_total_amt_igst|floatformat:2 }}</td>
-							</tr>
-						{% else %}
-							<tr>
-								<td>CGST: </td>
-								<td>{{ currency }} {{ invoice_data.invoice_total_amt_cgst|floatformat:2 }}</td>
-							</tr>
-							<tr>
-								<td>SGST: </td>
-								<td>{{ currency }} {{ invoice_data.invoice_total_amt_sgst|floatformat:2 }}</td>
-							</tr>
-						{% endif %}
-						<tr>
-							<td>Invoice Total: </td>
-							<td>{{ currency }} {{invoice_data.invoice_total_amt_with_gst|floatformat:2 }}</td>
-						</tr>
-						<tr> 
-							<td colspan="2" class="text-middle">
-								Invoice Total In Words: {{ total_in_words }} only.
-							</td>
-						</tr>
-						<tr id="invoice-signature-row">
-							<td colspan="2"></td>
-						</tr>
-						<tr id="invoice-signature-text-row">
-							<td colspan="2">Authorized Signatory<br> E, & O.E.	</td>
-						</tr>
-					</table>
 
 
 				</div>
-
-
-
 			</div>
-
 
 		</div>
 	</div>
 
-	<button onclick="window.print();" class="btn btn-primary d-print-none">Print Invoice</button>
+	<div class="card-body">
+
+		<div class="row">
+
+
+
+
+
+			<div class="col-sm-6 col-md-6 col-lg-6 col-6">
+				<h6 class="mb-3">Billed To:</h6>
+				<div>
+					<h4><strong>{{ invoice_data.customer_name }}</strong></h4>
+				</div>
+				<div>{{ invoice_data.customer_address }}</div>
+				<div>Phone: {{ invoice_data.customer_phone }}</div>
+				<div>GST No: {{ invoice_data.customer_gst }}</div>
+				{% if invoice_data.vehicle_number %}
+				<div><strong>Vehicle No:</strong> {{ invoice_data.vehicle_number }}</div>
+				{% endif %}
+			</div>
+
+
+
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="  table-responsive-sm">
+			<table class="table table-striped table-invoice">
+				<thead>
+					<tr>
+						<th class="text-center">#</th>
+						<th class="text-left">Item</th>
+						<th class="text-center">HSN / SAC</th>
+						<th class="text-center">Unit</th>
+						<th class="text-right">Qty</th>
+						<th class="text-right">Rate ({{ currency }})</th>
+						<th class="text-right">Taxable Amount ({{ currency }})</th>
+						<th class="text-right">GST (%)</th>
+						{% if invoice_data.igstcheck %}
+						<th class="text-right">IGST ({{ currency }})</th>
+						{% else %}
+						<th class="text-right">CGST ({{ currency }})</th>
+						<th class="text-right">SGST ({{ currency }})</th>
+						{% endif %}
+						<th class="text-right">Total Amount ({{ currency }})</th>
+
+					</tr>
+				</thead>
+				<tbody>
+					{% for item in invoice_data.items %}
+					<tr>
+						<td class="text-center">{{ forloop.counter }}</td>
+						<td class="text-left strong">{{ item.invoice_product }}</td>
+						<td class="text-center">{{ item.invoice_hsn }}</td>
+						<td class="text-center">{{ item.invoice_unit }}</td>
+						<td class="text-right">{{ item.invoice_qty }}</td>
+						<td class="text-right">{{ item.invoice_rate_without_gst|floatformat:2 }}</td>
+						<td class="text-right">{{ item.invoice_amt_without_gst|floatformat:2 }}</td>
+						<td class="text-right">{{ item.invoice_gst_percentage }}</td>
+						{% if invoice_data.igstcheck %}
+						<td class="text-right">{{ item.invoice_amt_igst|floatformat:2 }}</td>
+						{% else %}
+						<td class="text-right">{{ item.invoice_amt_cgst|floatformat:2 }}</td>
+						<td class="text-right">{{ item.invoice_amt_sgst|floatformat:2 }}</td>
+						{% endif %}
+						<td class="text-right">{{ item.invoice_amt_with_gst|floatformat:2 }}</td>
+					</tr>
+					{% endfor %}
+
+					<tr id="table-invoice-total-row">
+						{% if invoice_data.igstcheck %}
+						<td class="text-right" colspan="6">Total: </td>
+						<td class="text-right">{{ currency }}
+							{{ invoice_data.invoice_total_amt_without_gst|floatformat:2 }}</td>
+						<td class="text-right"></td>
+						<td class="text-right">{{ currency }} {{invoice_data.invoice_total_amt_igst|floatformat:2 }}
+						</td>
+						{% else %}
+						<td class="text-right" colspan="6">Total: </td>
+						<td class="text-right">{{ currency }}
+							{{ invoice_data.invoice_total_amt_without_gst|floatformat:2 }}</td>
+						<td class="text-right"></td>
+						<td class="text-right">{{ currency }} {{invoice_data.invoice_total_amt_cgst|floatformat:2 }}
+						</td>
+						<td class="text-right">{{ currency }} {{invoice_data.invoice_total_amt_sgst|floatformat:2 }}
+						</td>
+						{% endif %}
+						<td class="text-right"><strong>{{ currency }}
+								{{ invoice_data.invoice_total_amt_with_gst|floatformat:2 }}</strong></td>
+					</tr>
+
+				</tbody>
+			</table>
+		</div>
+
+		<div class="row ">
+
+
+			<div class="col-sm-6 col-lg-6 col-md-6">
+
+			</div>
+
+			<div class="col-sm-6 col-lg-6 col-md-6">
+				<table class="table text-right" id="invoice-grand-total-table">
+					<tr>
+						<td>Total Taxable Amount: </td>
+						<td>{{ currency }} {{ invoice_data.invoice_total_amt_without_gst|floatformat:2 }}</td>
+					</tr>
+					{% if invoice_data.igstcheck %}
+					<tr>
+						<td>IGST: </td>
+						<td>{{ currency }} {{ invoice_data.invoice_total_amt_igst|floatformat:2 }}</td>
+					</tr>
+					{% else %}
+					<tr>
+						<td>CGST: </td>
+						<td>{{ currency }} {{ invoice_data.invoice_total_amt_cgst|floatformat:2 }}</td>
+					</tr>
+					<tr>
+						<td>SGST: </td>
+						<td>{{ currency }} {{ invoice_data.invoice_total_amt_sgst|floatformat:2 }}</td>
+					</tr>
+					{% endif %}
+					<tr>
+						<td>Invoice Total: </td>
+						<td>{{ currency }} {{invoice_data.invoice_total_amt_with_gst|floatformat:2 }}</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="text-middle">
+							Invoice Total In Words: {{ total_in_words }} only.
+						</td>
+					</tr>
+					<tr id="invoice-signature-row">
+						<td colspan="2">
+							<h5> Receiver's Signature</h5>
+
+						</td>
+					</tr>
+				</table>
+
+
+			</div>
+
+
+
+		</div>
+			<div class="row ">
+				<div class="col">
+					<bold>Terms & Conditions
+						<hr> </bold>
+					<p class="text-start"> 1. Goods Once said will not be taken back. <br>
+						2. Interst @ 18%p.a will be charged if payment <br> is not made with in the stipulated time <br>
+						3. Subject to 'Kaithal' juridiction only
+					</p>
+
+
+
+
+				</div>
+				<div class="col">
+
+				</div>
+				<div class="col">
+					<p class="text-end p-md-5 m-2">
+						For. {{user_profile.business_title}} <br>
+
+						<td>Authorized Signatory<br> E, & O.E.
+						</td>
+
+					</p>
+				</div>
+			</div>
+
+	</div>
+</div>
+
+<button onclick="window.print();" class="btn btn-primary d-print-none">Print Invoice</button>
 
 
 {% endblock %}
